--- a/MarvelAppUIKit/Keys/Keys.plist
+++ b/MarvelAppUIKit/Keys/Keys.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>SERVICE_HASH</key>
-	<string>6edc18ab1a954d230c1f03c590d469d2</string>
+	<string></string>
 	<key>SERVICE_API_KEY</key>
-	<string>080a502746c8a60aeab043387a56eef0</string>
+	<string></string>
 	<key>TIME_STAMP</key>
 	<string>1</string>
 </dict>
